kubernetes/auth-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: quick-haul
spec:
  type: ClusterIP
  ports:
  - port: 8002
    targetPort: 8002
  selector:
    app: auth-service
